Thu Jul 11 20:17:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): check null char in char, not in
	  byte.

Thu Jul 11 14:48:35 2013  Zachary Scott  <e@zzak.io>

	* array.c: Replace confusing example for #reverse_each in overview
	  Patch by Earl St Sauver [Fixes documenting-ruby/ruby-12]
	  https://github.com/documenting-ruby/ruby/pull/12

Thu Jul 11 14:22:37 2013  Zachary Scott  <e@zzak.io>

	* test/drb/ut_eq.rb: Use localhost for drb tests [Bug #7311]
	  Patch by Vit Ondruch [ruby-core:49101]
	* test/drb/ut_array.rb: ditto
	* test/drb/ut_array_drbssl.rb: ditto

Thu Jul 11 13:48:03 2013  Zachary Scott  <e@zzak.io>

	* sprintf.c: Fix typo patch by @hynkle [Fixes GH-357]
	  https://github.com/ruby/ruby/pull/357

Thu Jul 11 13:00:34 2013  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: Refactor conditions by Rafal Chmiel
	  [Fixes GH-326] https://github.com/ruby/ruby/pull/326

Thu Jul 11 12:04:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Don't use toom3 after once karatsuba is choosen.
	  (mulfunc_t): New type.
	  (bary_mul_toom3_start): Renamed from bary_mul.
	  (bary_mul_karatsuba_start): Renamed from bary_mul.
	  (bary_mul_balance_with_mulfunc): Renamed from bary_mul_balance and
	  new argument, mulfunc, is added.
	  (rb_big_mul_balance): Invoke bary_mul_balance_with_mulfunc with
	  bary_mul_toom3_start.
	  (bary_mul_karatsuba): Invoke bary_mul_karatsuba_start instead of
	  bary_mul.
	  (bary_mul_precheck): Extracted from bary_mul.
	  (bary_mul_karatsuba_branch): Extracted from bary_mul.
	  (bary_mul_karatsuba_start): New function to call bary_mul_precheck
	  and bary_mul_karatsuba_branch.
	  (bary_mul_toom3_branch): Extracted from bary_mul.
	  (bary_mul_toom3_start): New function to call bary_mul_precheck and
	  bary_mul_toom3_branch.
	  (bary_mul): Just call bary_mul_toom3_start.
	  Arguments for work memory are removed.
	  (rb_cstr_to_inum): Follow the bary_mul change.
	  (bigmul0): Ditto.
